syntax = "proto3";

package notification.pb;
option go_package = "notification/api;pb";

import "google/api/annotations.proto";
import "notification/api/message.proto";

service Notification {
  rpc RegisterArn (RegisterArnRequest) returns (NothingResponse) {
    option (google.api.http) = {
      post: "/v1/notification/arn"
      body: "*"
    };
  };
  rpc DeleteArn (DeleteArnRequest) returns (NothingResponse) {
    option (google.api.http) = {
      delete: "/v1/notification/arn/{appId}/{deviceID}/{publishId}/{delType}"
    };
  };
  rpc PublishMessage (PublishMessageRequest) returns (NothingResponse) {
    option (google.api.http) = {
      post: "/v1/notification/message"
      body: "*"
    };
  };
  rpc SubscribeTopic (SubscribeTopicRequest) returns (NothingResponse) {
    option (google.api.http) = {
      post: "/v1/notification/subscribe"
      body: "*"
    };
  };
}
